       environment variables override these system-derived values. The
       intention is to allow an originating host to set these values on
       another host where Sqitch will actually execute.
     - Fixed an error triggered by whitespace trailing an engine name in the
       configuration. Thanks to Jeremy Simkins for the report (#400).

0.9997 2018-03-15T21:13:52Z
     - Fixed the Firebird engine to properly detect multiple instances of a
       change specified to `revert` and `verify`, matching the behavior of
       displaying tag-qualified alternates added to the other engines in
       v0.9996.
     - Fixed test failure on Windows.
     - Updated the MySQL and PostgreSQL tests to use process-specific database
       names, to try to avoid conflicts when tests are being run by multiple
       processes on the same box, as happens with CPAN smoke testing boxes.
     - Fixed an issue where Sqitch would sometimes truncate the registry
       version number fetched from Postgres, most likely because the Perl
       runtime was using 32-bit integers. Fixed by casting the version to text
       in the query, before Perl ever see it. Thanks to Malte Legenhausen for
       the report (#343).
     - The MySQL engine will now read the username from MySQL configuration
       files. Thanks to Eliot Alter for the bug report (#353).
     - Added Italian translation, with thanks to Luca Ferrari and @BeaData!
     - Improved multi-value config examples in the `sqitch-config`
       documentation to be a bit less confusing. Thanks to Emil for reporting
       where he got confused!
     - Added the Exasol engine. Thanks to Johan Wärlander for the PR (#362)!
     - Fixed an issue where URI::db needed to be explicitly loaded. Thanks to
       Hugh Esco for the report (#370)!
     - Changed the exit value for `rebase` and `revert` from 1 to 0 when there
       is no work to do. This is to match the expectation of non-zero exit